--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>my-simple-website</title>
+    <link rel="stylesheet" href="style/blog.css">
   </head>
-  <body></body>
+  <body>
+   <div>
+      <h2>ami nazmul</h2>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam blanditiis necessitatibus ipsam, suscipit adipisci earum dolores. Nisi eaque optio, vero est molestiae molestias quibusdam ipsam repellat pariatur ipsum cumque recusandae!</p>
+   </div>
+  </body>
 </html>
